Adjust font size on about section both large and small screen

--- a/index.html
+++ b/index.html
@@ -44,12 +44,26 @@
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum
-              tempore dolorum suscipit, veritatis, cumque corporis quam
-              temporibus aspernatur facilis, reiciendis perspiciatis accusamus
-              autem? Vero et laboriosam rem veniam, illo quo!
+              Hi Everyone, I am Jeleel Ajetunmobi from Lagos, Nigeria.<br /><br />
+              As a front-end developer, I specialize in crafting responsive,
+              user-friendly, and visually stunning interfaces that bring
+              websites and applications to life. With a passion for coding and a
+              keen eye for design.<br /><br />
+              I'm dedicated to staying up-to-date with the latest trends and
+              technologies, ensuring that my skills are always sharp and my
+              projects are always cutting-edge. Let's build something amazing
+              together!<br /><br />
+              Apart from coding, some other activities that I love to do!<br />
             </p>
-
+            <ul>
+              <li>
+                <i class="fa-regular fa-hand-point-right"></i>Playing Games
+              </li>
+              <li>
+                <i class="fa-regular fa-hand-point-right"></i>Writing Tech Blogs
+              </li>
+              <li><i class="fa-regular fa-hand-point-right"></i>Traveling</li>
+            </ul>
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('skills')">
                 Skills
