services and portfolio texts updated

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="row">
           <div class="about-col-1">
-            <img src="assets/img/picture1.png" />
+            <img src="assets/img/picture2.png" />
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
@@ -75,13 +75,23 @@
             </div>
             <div class="tab-contents active-tab" id="skills">
               <ul>
-                <li><span>UI/UX</span><br />Designing web/app interface</li>
                 <li>
-                  <span>Front-End Web Development</span><br />Web app
-                  application
+                  <span>Front-End Web Development</span><br />HTML5 (structure
+                  and semantics), CSS3, JavaScript, React, Angular, Vue.js,
+                  Bootstrap, Tailwind CSS, Responsive web design
+                  (mobile-friendly and accessible), and Version control (Git and
+                  GitHub).
                 </li>
                 <li>
-                  <span>App Development</span><br />Building Android/iOS App
+                  <span>Graphic Digital Design</span><br />Designing websites
+                  social media graphics, Visual identity (Logos, branding, and
+                  brand guidelines) and email marketing graphics.
+                </li>
+                <li>
+                  <span>App Development</span><br />Building Android/iOS App,
+                  Programming languages, Development frameworks, Testing
+                  frameworks, Version Control System, and Agile development
+                  methodologies.
                 </li>
               </ul>
             </div>
@@ -130,34 +140,39 @@
             <i class="fa-solid fa-code"></i>
             <h2>Web Design</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              odit ea, tempora nulla autem ratione! Corporis, harum excepturi
-              necessitatibus dolore esse minus reprehenderit, error eaque beatae
-              facere ullam vel porro!
+              Front-end web development is the process of building the user
+              interface and user experience of a website or web application
+              using HTML, CSS, JavaScript, and various frameworks and libraries.
             </p>
-            <a href="#">Learn more</a>
+            <a href="https://www.linkedin.com/in/jeleelajetunmobi"
+              >Learn more</a
+            >
           </div>
           <div>
             <i class="fa-solid fa-crop-simple"></i>
-            <h2>UI/UX Design</h2>
+            <h2>Graphic Design</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              odit ea, tempora nulla autem ratione! Corporis, harum excepturi
-              necessitatibus dolore esse minus reprehenderit, error eaque beatae
-              facere ullam vel porro!
+              Graphic design is the art of visual communication and
+              problem-solving through the use of typography, color, images, and
+              other visual elements. It involves creating designs that convey
+              messages, express ideas, and capture audiences' attention.
             </p>
-            <a href="#">Learn more</a>
+            <a href="https://www.linkedin.com/in/jeleelajetunmobi"
+              >Learn more</a
+            >
           </div>
           <div>
             <i class="fa-brands fa-app-store"></i>
             <h2>App Design</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              odit ea, tempora nulla autem ratione! Corporis, harum excepturi
-              necessitatibus dolore esse minus reprehenderit, error eaque beatae
-              facere ullam vel porro!
+              App development is the process of creating software applications
+              for mobile devices, tablets, or computers. It involves designing,
+              building, testing, and deploying apps that meet specific
+              requirements and provide a great user experience.
             </p>
-            <a href="#">Learn more</a>
+            <a href="https://www.linkedin.com/in/jeleelajetunmobi"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -188,10 +203,13 @@
           <div class="project">
             <img src="assets/img/project2.png" alt="project" />
             <div class="layer">
-              <h3>Expense Tracker</h3>
+              <h3>Digiplus Connect</h3>
               <p>
-                An Expense Tracker App designed to help individuals and
-                businesses manage their finances efficiently!
+                Digiplus Connect is a digital transformation company that offers
+                various services, including: Digital Transformation and
+                Responsive Solutions. Digiplus provides businesses with
+                responsive solutions to improve their operations and customer
+                engagement.
               </p>
               <a href="https://digiplus-services-page.vercel.app/"
                 ><i class="fas fa-external-link-alt"></i
@@ -201,10 +219,12 @@
           <div class="project">
             <img src="assets/img/project3.png" alt="project" />
             <div class="layer">
-              <h3>Expense Tracker</h3>
+              <h3>Viatours Hotel</h3>
               <p>
-                An Expense Tracker App designed to help individuals and
-                businesses manage their finances efficiently!
+                Hotel Viatours is located in Nigeria, Lagos. It is close to the
+                most important monuments of Ogudu city, only 20 minutes driving
+                distance from the Ikeja, and only 13 minutes walking distance
+                from Ojota
               </p>
               <a href="https://viatours-services-page.vercel.app/"
                 ><i class="fas fa-external-link-alt"></i
