About us section exprience and education updated

--- a/index.html
+++ b/index.html
@@ -98,22 +98,24 @@
             <div class="tab-contents" id="experience">
               <ul>
                 <li>
-                  <span>2023 - current</span><br />Frontend Developer at Andela
+                  <span>April. 2024 - June. 2024</span><br />Frontend Developer
+                  Intern at 8thgear Hub
                 </li>
                 <li>
-                  <span>2022 - 2023</span><br />
-                  Team Lead at Appinio
+                  <span>March. 2024 - April. 2024</span><br />
+                  Project Team Lead at Innkeeper Acadamy
                 </li>
                 <li>
-                  <span>2021 - 2022</span><br />Frontend developer at Appinio
+                  <span>April. 2022 - Febuary. 2023</span><br />Project Enforcer
+                  at Arise Business Link(IE)
                 </li>
               </ul>
             </div>
             <div class="tab-contents" id="education">
               <ul>
                 <li>
-                  <span>2024 - current</span><br />Frontend Web Development at
-                  Innkeeper Academic
+                  <span>2024</span><br />Frontend Web Development from Innkeeper
+                  Academy
                 </li>
                 <li>
                   <span>2019</span><br />Higher National Diploma from Federal
