uploading of cv

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <ul>
                 <li>
                   <span>2024</span><br />Frontend Web Development from Innkeeper
-                  Academy
+                  Academy.
                 </li>
                 <li>
                   <span>2019</span><br />Higher National Diploma from Federal
@@ -179,6 +179,7 @@
         </div>
       </div>
     </div>
+    <!-- Services section ends here -->
 
     <!-- Portfolio section begins here -->
     <div id="portfolio">
@@ -195,7 +196,7 @@
                   businesses manage their finances efficiently!
                 </p>
                 <a
-                  href="https://lnkd.in/g6kB3TA9
+                  href="https://expense-tracker-pi-black.vercel.app/
 "
                   ><i class="fas fa-external-link-alt"></i
                 ></a>
@@ -261,7 +262,7 @@
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
             </div>
-            <a href="assets/img/Jeleel_resume.pdf" class="btn btn2"
+            <a href="assets/img/JELEEL OLOYEDE AJETUNMOBI.pdf" class="btn btn2"
               >Download Cv</a
             >
           </div>
