--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jeleel Portfolio website</title>
     <link href="assets/css/style.css" rel="stylesheet" />
+    <link rel="icon" href="assets/img/favicon.png" type="image/png" />
     <script
       src="https://kit.fontawesome.com/38b421c4ae.js"
       crossorigin="anonymous"
