add more projects functionality with see more btn

--- a/index.html
+++ b/index.html
@@ -186,57 +186,52 @@
     <div id="portfolio">
       <div class="container">
         <h1 class="sub-title">Portfolio</h1>
-        <div class="project-list">
+        <div class="project-list" id="project-list">
           <div class="project">
-            <img src="assets/img/project1.png" alt="project" />
+            <img src="assets/img/project4.png" alt="project" />
             <div>
               <div class="layer">
-                <h3>Expense Tracker</h3>
+                <h3>Shop.co</h3>
                 <p>
-                  An Expense Tracker App designed to help individuals and
-                  businesses manage their finances efficiently!
+                  Browse through diverse range of meticulously crafted garments,
+                  designed to bring out your individuality.<br /><br />
+                  Tools used: ReactJs, Bootstrap
                 </p>
-                <a
-                  href="https://expense-tracker-pi-black.vercel.app/
-"
+                <a href="https://shopco-hng.vercel.app/"
                   ><i class="fas fa-external-link-alt"></i
                 ></a>
               </div>
             </div>
           </div>
           <div class="project">
-            <img src="assets/img/project2.png" alt="project" />
+            <img src="assets/img/project5.png" alt="project" />
             <div class="layer">
-              <h3>Digiplus Connect</h3>
+              <h3>Innkeeper LMS</h3>
               <p>
-                Digiplus Connect is a digital transformation company that offers
-                various services, including: Digital Transformation and
-                Responsive Solutions. Digiplus provides businesses with
-                responsive solutions to improve their operations and customer
-                engagement.
+                Kickstart a career in Tech and become globally valuable.<br /><br />
+                Tools used: ReactJs, Bootstrap
               </p>
-              <a href="https://digiplus-services-page.vercel.app/"
+              <a href="https://innkeeper-skillup.vercel.app/"
                 ><i class="fas fa-external-link-alt"></i
               ></a>
             </div>
           </div>
           <div class="project">
-            <img src="assets/img/project3.png" alt="project" />
+            <img src="assets/img/project1.png" alt="project" />
             <div class="layer">
-              <h3>Viatours Hotel</h3>
+              <h3>Expense Tracker</h3>
               <p>
-                Hotel Viatours is located in Nigeria, Lagos. It is close to the
-                most important monuments of Ogudu city, only 20 minutes driving
-                distance from the Ikeja, and only 13 minutes walking distance
-                from Ojota
+                An Expense Tracker App designed to help individuals and
+                businesses manage their finances efficiently!<br /><br />
+                Tools used: HTML, CSS, Javascript
               </p>
-              <a href="https://viatours-services-page.vercel.app/"
+              <a href="https://expense-tracker-pi-black.vercel.app/"
                 ><i class="fas fa-external-link-alt"></i
               ></a>
             </div>
           </div>
         </div>
-        <a href="#" class="btn">See more</a>
+        <a href="#" class="btn" id="see-more">See more</a>
       </div>
     </div>
     <!-- Contact form begins here -->
