--- a/index.html
+++ b/index.html
@@ -257,6 +257,9 @@
               <a href="https://www.linkedin.com/in/jeleelajetunmobi"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
+              <a href="https://www.peiges.co/ajetech"
+                ><i class="fa-custom"></i
+              ></a>
             </div>
             <a href="assets/img/JELEEL OLOYEDE AJETUNMOBI.pdf" class="btn btn2"
               >Download Cv</a
